fix board align

--- a/res/board_abs.css
+++ b/res/board_abs.css
@@ -7,6 +7,7 @@
 	border-width: 8px;
 	border-radius: 40px;
 	font-family: Microsoft YaHei,sans-serif,Arial;
+	margin: auto;
 }
 
 #slots, #gameboard {
